# glasshouse

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  pikvm_coord_verify.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql.yml  release.yml
LICENSES/: material-design-icons-NOTICE.txt
config/: example.yaml
specs/: DESIGN.md
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  config.cpp  config.h  logging.cpp  logging.h  pikvmclient.cpp  pikvmclient.h  pikvmevents.cpp  pikvmevents.h  secrets.cpp  secrets.h
src/input/: CMakeLists.txt  coord_transform.cpp  coord_transform.h  input_router.cpp  input_router.h  keymap.cpp  keymap.h
src/video/: CMakeLists.txt  janusclient.cpp  janusclient.h  janusprobe_main.cpp  mjpegpipeline.cpp  mjpegpipeline.h  msddialog.cpp  msddialog.h  pointerconfiner.cpp  pointerconfiner.h  specialkeysdialog.cpp  specialkeysdialog.h  videopipeline.cpp  videopipeline.h  videowindow.cpp  videowindow.h
src/viewer/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_config.cpp  test_coord_transform.cpp  test_keymap.cpp
